[gd_scene load_steps=4 format=3 uid="uid://gpkadhx4rd40"]

[ext_resource type="Script" path="res://scripts/menus/levels_menu.gd" id="1_4nnki"]
[ext_resource type="Theme" uid="uid://cmox6att1o3fd" path="res://scenes/ui/menu_theme.tres" id="1_vcc70"]
[ext_resource type="AudioStream" uid="uid://ci7jvibev6t5u" path="res://assets/sounds/click.wav" id="3_nuebe"]

[node name="levels_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4nnki")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.129412, 0.0901961, 0.0901961, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = -48

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
theme = ExtResource("1_vcc70")
theme_override_font_sizes/font_size = 64
text = "levels"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 140
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 140
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("1_vcc70")

[node name="level_1" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_font_sizes/font_size = 75
text = "Level 1"

[node name="Label" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 33
text = "Best time:"

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_vcc70")

[node name="level_2" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_font_sizes/font_size = 75
text = "Level 2"

[node name="Label" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 33
text = "Best time:"

[node name="VBoxContainer4" type="VBoxContainer" parent="MarginContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme = ExtResource("1_vcc70")

[node name="level_3" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_font_sizes/font_size = 75
text = "Level 3"

[node name="Label" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 33
text = "Best time:"

[node name="buttons_v_box" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 32.0
offset_right = 148.0
offset_bottom = 105.0
size_flags_horizontal = 0
size_flags_vertical = 2

[node name="exit" type="Button" parent="buttons_v_box"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme = ExtResource("1_vcc70")
theme_override_font_sizes/font_size = 72
text = "Exit
"

[node name="click_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_nuebe")

[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer2/level_1" to="." method="when_pressed_button_level_1"]
[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer3/level_2" to="." method="when_pressed_button_level_2"]
[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer4/level_3" to="." method="when_pressed_button_level_3"]
[connection signal="pressed" from="buttons_v_box/exit" to="." method="when_pressed_button_exit"]
